Changelog
=========

1.0RC1 (unreleased)
-------------------

- Link directly to the "Discussion Item" types control panel in the moderation
  view.
  [timo]

- Show "moderate comments" link in the admin panel only if a moderation 
  workflow is enabled for comments.
  [timo]

- Do not allow to change the mail settings in the discussion control panel, if 
  there is no valid mail setup.
  [timo]
  
- Disable all commenting options in the discussion control panel if comments
  are disabled globally.
  
- Check for the 'review comments' permission instead of 'manage' to decide
  if the user should see a 'this comment is pending' message.
  [timo]

- Move "moderate comments" site action above the logout action.
  [timo]

- Moderator notification description updated.
  [timo]
   
- Redirect back to the discussion control panel when the discussion control
  panel form is submitted.
  [timo]   

- Fix document_byline bottom margin if commenter images are disabled.
  [timo]

- Dynamically show the comment formatting message dependent on the text
  transform setting.
  [timo]

- Description for text transform added to the discussion control panel.
  [timo]

- Move the discussion control panel to the core Plone configuration.
  [timo]

- Always set the effective date of a comment to the same value as the creation
  date. 
  [timo]

- Fix SMTP exception when an email is send to the moderator.
  [timo]

- Make sure comment UIDs in the catalog are always unique. This fixes  
  http://dev.plone.org/plone/ticket/10652. 
  [timo] 

- Fix 'check all' on batch moderation page.
  [davisagli]

- Use safe_unicode to decode the title of the content. encode("utf-9") caused 
  Dexterity based content types to raise a unicode decode error. This fixes 
  http://dev.plone.org/plone/ticket/11292
  [dukebody] 

- Spanish translation updated.
  [dukebody]

- Catalan translation added.
  [sneridagh]

- Convert anonymous-supplied name to unicode as done for authenticated members.
  [ggozad]
