@@ -25,6 +25,24 @@
         tal:attributes="src string:${context/portal_url}/++resource++plone.app.discussion.javascripts/controlpanel.js">
     </script>
     
+    <dl class="portalMessage warning"
+        tal:condition="view/mailhost_warning">
+        <dt i18n:translate="">
+            Warning
+        </dt>
+        <dd i18n:translate="text_no_mailhost_configured">
+            You have not configured a mail host or a site 'From'
+            address, various features including contact forms, email
+            notification and password reset will not work. Go to the
+            <tal:link i18n:name="label_mail_control_panel_link">
+                <a href=""
+                   i18n:translate="text_no_mailhost_configured_control_panel_link"
+                   tal:attributes="href string:${portal_url}/@@mail-controlpanel"
+                >Mail control panel</a>
+            </tal:link>
+            to fix this.
+        </dd>
+    </dl>
     <div metal:use-macro="context/global_statusmessage/macros/portal_message">
       Portal status message
     </div>
